Restructure JS, init Toolbar class

--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
 
   </div>
 
+  <div class="toolbar-btn">
+    <i class="fa fa-cog"></i>
+  </div>
+
+
+  <div class="tool-container" />
+  <div class="tool-items" />
+  <div class="tool-arrow" />
 
   <script src="https://cdn.jsdelivr.net/npm/@shopify/draggable@1.0.0-beta.7/lib/draggable.bundle.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -146,6 +154,8 @@
           crossorigin="anonymous">
   </script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
-  <script src="./script.js"></script>
+  <script src="./js/EmailBuilder.js"></script>
+  <script src="./js/Toolbar.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
