Extract HTML functionality, wrap rows to 100% width

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
   </script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js'></script>
   <script src="./js/EmailBuilder.js"></script>
+  <script src="./js/HTMLRenderer.js"></script>
+  <script src="./js/Controller.js"></script>
   <script src="./js/Toolbar.js"></script>
   <script src="./js/main.js"></script>
 </body>
