Fix drag and drop bug with Controller, add initial content panel

--- a/index.html
+++ b/index.html
@@ -130,12 +130,20 @@
         </div>
       </div>
 
+      <div id="content-settings" class="hider">
+        <div class="content-settings-header">
+          <h5>Content Settings</h5>
+          <a href="#" class="close-panel">
+            <i class="fas fa-minus"></i>            
+          </a>
+        </div>
+        <div class="content-settings-body"></div>
+      </div>
     </div>
     
     <div class="col-md-9 no-pad" id="email-builder">
       <div id="email-grid" class="draggable-container"></div>
     </div>
-
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@shopify/draggable@1.0.0-beta.7/lib/draggable.bundle.js"></script>
