Toggle panel on content click

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </div>
 
-      <div id="content-settings" class="hider">
+      <div id="content-settings" class="closed">
         <div class="content-settings-header">
           <h5>Content Settings</h5>
           <a href="#" class="close-panel">
